# ordr_srvc

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: e3bb00cabf24_order_table.py
app/: config.py  container.py  main.py
app/application/: container.py  dto.py  exceptions.py
app/application/use_cases/: create_order_use_case.py  get_order_use_case.py  payment_callback_use_case.py
app/domain/: exceptions.py  models.py
app/infrastructure/: container.py  exceptions.py  repositories.py  uow.py
app/infrastructure/http_reqs/: http_catalog.py  http_payment.py
app/infrastructure/models/: order.py
app/presentation/: order_router.py
app/utils/: create_container.py
